@@ -1,10 +1,10 @@
 # Breakout4
-a breakout clone ( balls, rackets and monsters )
+A breakout clone ( balls, rackets and monsters )
 
-Breakout4 This game is a Breakout clone with balls, bricks and monsters. The game has an assumed humour and is aimed at giving fun to the player with differents levels with bricks walls and sometimes monsters that can interfere with the player's goal which is to destory all bricks at the screen.
+Breakout4 This game is a Breakout clone with balls, bricks and monsters. The game has an assumed humour and is aimed at giving fun to the player with differents levels with bricks walls and sometimes monsters that can interfere with the player's goal which is to destroy all bricks at the screen.
 
 There is two single player campaigns in this game, one with a shop (you get bonuses coins in levels and spend them in a shop inbetween levels for six kind of bonuses: sticky racket ; one more player ball reserve ; speed up racket ; enlarge racket ; enlarge rims and power ball ). The second campaign is without shop, you get bonuses directly while playing levels instead of buying them in the shop.
 
-There is also a duel mode in which two players can play each against the other player. The duel mode starts with a final score to define that make the final goal to make out a winning player. Then you come to a screen in which you can select a level to play, a number of points to play in this level (independently from the final score) the maximum number of ball and bonus coins at a given time and the players bonuses granularity. Each level is special, that means it has its won monsters, bricks matrix, and special zone bonus (there are common bonuses for every level that said).
+There is also a duel mode in which two players can play each against the other player. The duel mode starts with a final score to define that makes the final goal to declare a winning player. Then you come to a screen in which you can select a level to play, a number of points to play in this level (independently from the final score) the maximum number of ball and bonus coins at a given time and the players bonuses granularity. Each level is special, that means it has its own monsters, bricks matrix, and special zone bonus (there are common bonuses for every level that said).
 
 The game is still in building phase but it is well advanced, the most important wanted features being there already. You can download this game (with the ready binaries and data) on my personal web site: 'https://www.ant01.fr' If you want this game to run on unixoids systems you can compile the sources.
